test/cases/compile_errors/redundant_in_comptime.zig
comptime {
    _ = @inComptime();
}

// error
//
// :2:9: error: redundant '@inComptime' in comptime scope
